--- a/quiz.css
+++ b/quiz.css
@@ -1,4 +1,3 @@
-/* importing google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
     margin: 0;
@@ -8,12 +7,12 @@
 }
 
 body{
-    background: #007bff;
+    background: purple;
 }
 
 ::selection{
     color: #fff;
-    background: #007bff;
+    background: purple;
 }
 
 .start_btn,
@@ -40,7 +39,7 @@ body{
 .start_btn button{
     font-size: 25px;
     font-weight: 500;
-    color: #007bff;
+    color: purple;
     padding: 15px 30px;
     outline: none;
     border: none;
@@ -82,7 +81,7 @@ body{
 
 .info_box .info-list .info span{
     font-weight: 600;
-    color: #007bff;
+    color: purple;
 }
 .info_box .buttons{
     height: 60px;
@@ -103,7 +102,7 @@ body{
     border: none;
     outline: none;
     border-radius: 5px;
-    border: 1px solid #007bff;
+    border: 1px solid purple;
     transition: all 0.3s ease;
 }
 
@@ -136,9 +135,9 @@ body{
 }
 
 .quiz_box header .timer{
-    color: #004085;
-    background: #cce5ff;
-    border: 1px solid #b8daff;
+    color: black;
+    background: lightpink;
+    border: 1px solid lightpink;
     height: 45px;
     padding: 0 8px;
     border-radius: 5px;
@@ -173,7 +172,7 @@ body{
     bottom: 0px;
     left: 0px;
     height: 3px;
-    background: #007bff;
+    background: purple;
 }
 
 section{
@@ -287,8 +286,8 @@ footer button{
     outline: none;
     color: #fff;
     border-radius: 5px;
-    background: #007bff;
-    border: 1px solid #007bff;
+    background: purple;
+    border: 1px solid purple;
     line-height: 10px;
     opacity: 0;
     pointer-events: none;
@@ -297,7 +296,7 @@ footer button{
 }
 
 footer button:hover{
-    background: #0263ca;
+    background: purple;
 }
 
 footer button.show{
@@ -323,7 +322,7 @@ footer button.show{
 
 .result_box .icon{
     font-size: 100px;
-    color: #007bff;
+    color: purple;
     margin-bottom: 10px;
 }
 
@@ -359,25 +358,25 @@ footer button.show{
     border: none;
     outline: none;
     border-radius: 5px;
-    border: 1px solid #007bff;
+    border: 1px solid purple;
     transition: all 0.3s ease;
 }
 
 .buttons button.restart{
     color: #fff;
-    background: #007bff;
+    background: purple;
 }
 
 .buttons button.restart:hover{
-    background: #0263ca;
+    background: purple;
 }
 
 .buttons button.quit{
-    color: #007bff;
+    color: purple;
     background: #fff;
 }
 
 .buttons button.quit:hover{
     color: #fff;
-    background: #007bff;
+    background: purple;
 }
