--- a/lesson-1.css
+++ b/lesson-1.css
@@ -3,11 +3,14 @@
 
 /* Slideshow container */
 .slideshow-container {
-  height: 100px;
-  width: 40%;
+  height: 350px;
+  width: 45%;
   position: absolute;
-  top: 800px;
-  background-color: red;
+  background-color: white;
+  border-style: outset;
+  border-radius: 7px;
+  border-color: purple;
+  left: 20px;
 }
 
 /* Hide the images by default */
@@ -48,14 +51,14 @@
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
-  bottom: 70px;
+  bottom: 290px;
   width: 100%;
   text-align: center;
 }
 
 /* Number text (1/7 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -76,6 +79,7 @@
 
 .ParaInSlides {
     text-align: center;
+    font-size: large;
 }
 
 @-webkit-keyframes fade {
@@ -88,9 +92,25 @@
   to {opacity: 1}
 }
 /*Main website css */
-body{
-    background-color: purple
+
+.heading {
+  background-color: black;
+  color: white;
+  width: 100%;
+  text-align: center;
+  position: absolute;
 }
+
+img {
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+
+
+
 /*dictionary css */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
@@ -101,14 +121,15 @@ body{
 }
 .box{
   position: absolute;
-  width: 600px;
+  width: 420px;
   border-radius: 7px;
   background: #fff;
   padding: 25px 28px 45px;
   box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
-  top: 200px;
-  right: 80px;
-  width: 40%;
+  width: 50%;
+  border-style: outset;
+  border-color: purple;
+  right: 20px;
 }
 .box header{
   font-size: 28px;
@@ -243,3 +264,4 @@ ul .content::-webkit-scrollbar{
     margin-right: auto;
     width: 50%;
 }
+
