--- a/lesson-1.css
+++ b/lesson-1.css
@@ -108,6 +108,42 @@ img {
     width: 50%;
 }
 
+body{
+  font-size: large;
+}
+
+.container,.container2{
+  display: flex;
+  flex-direction: row;
+
+}
+.flex-item{
+
+flex-grow: 1;
+flex-basis: 15%;
+display: flex;
+flex-direction: column;
+border: 1px solid purple;
+border-style: outset;
+border-radius: 7px;
+padding: 1px;
+padding: 20px;
+
+}
+
+
+.flex-item2{
+ 
+ flex-grow: 1;
+ flex-basis: 15%;
+ display: flex;
+ flex-direction: column;
+ border: 1px solid purple;
+ border-style: outset;
+ border-radius: 7px;
+ padding: 20px;
+}
+
 
 
 
