--- a/lesson-1.css
+++ b/lesson-1.css
@@ -5,7 +5,6 @@
 .slideshow-container {
   height: 350px;
   width: 45%;
-  position: absolute;
   background-color: white;
   border-style: outset;
   border-radius: 7px;
@@ -22,11 +21,11 @@
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 1000px;
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -36,7 +35,7 @@
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
+  right: 850px;
   border-radius: 3px 0 0 3px;
 }
 
@@ -47,22 +46,16 @@
 
 /* Caption text */
 .text {
-  color: black;
-  font-size: 15px;
-  padding: 8px 12px;
   position: absolute;
-  bottom: 290px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/7 etc) */
-.numbertext {
+  top:690px;
+  left:250px ;
   color: black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
-  top: 0;
+  bottom: 310px;
+  width: 100%;
+  
 }
 
 .active {
@@ -79,7 +72,7 @@
 
 .ParaInSlides {
     text-align: center;
-    font-size: large;
+    font-size: medium;
 }
 
 @-webkit-keyframes fade {
@@ -93,14 +86,6 @@
 }
 /*Main website css */
 
-.heading {
-  background-color: black;
-  color: white;
-  width: 100%;
-  text-align: center;
-  position: absolute;
-}
-
 img {
   display: block;
     margin-left: auto;
@@ -109,10 +94,38 @@ img {
 }
 
 body{
-  font-size: large;
+  font-size: medium;
+}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-transform: capitalize;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
 }
 
-.container,.container2{
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+section {
+  padding: 3rem 9%;
+}
+
+.flexbox{
+  width: 100%;
+  height: 600px;
+
+}
+.container1,.container2{
   display: flex;
   flex-direction: row;
 
@@ -142,11 +155,131 @@ padding: 20px;
  border-style: outset;
  border-radius: 7px;
  padding: 20px;
+
 }
 
 p {
   margin-top: 1em ;
   margin-bottom: 1em ;
+}
+
+/* Grey header at the top of the screen */
+.header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 9%;
+  background: #5f5f5f;
+}
+
+/* Logo of the header */
+.header .logo {
+  font-size: 2.5rem;
+  font-weight: bolder;
+  color: #fff;
+}
+
+.header .logo i {
+  color: #16070e;
+}
+
+.header .navbar ul {
+  list-style: none;
+}
+
+.header .navbar ul li {
+  position: relative;
+  float: left;
+}
+
+.header .navbar ul li:hover ul {
+  display: block;
+}
+
+.header .navbar ul li a {
+  padding: 2rem;
+  display: block;
+  font-size: 1.7rem;
+  color: #fff;
+}
+
+.header .navbar ul li a:hover {
+  background: #00790a;
+}
+
+/* List for Lessons page and header page */
+.header .navbar ul li ul {
+  position: absolute;
+  left: 0;
+  width: 20rem;
+  background: #c0bd05;
+  display: none;
+}
+
+.header .navbar ul li ul li {
+  width: 100%;
+}
+
+#menu-btn {
+  cursor: pointer;
+  color: #fff;
+  font-size: 2.5rem;
+  display: none;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-transform: capitalize;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+section {
+  padding: 3rem 9%;
+}
+
+/* css for footer */
+.footer {
+  background: #f5f5f5;
+}
+
+.footer .credit {
+  text-align: center;
+  margin-top: 2rem;
+  padding: 1rem;
+  padding-top: 2.5rem;
+  font-size: 2rem;
+  color: #666;
+  border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
+}
+
+.footer .credit span {
+  color: #1b0691;
 }
 
 
@@ -160,9 +293,9 @@ p {
   color: #fff;
   background: purple;
 }
-.box{
+.box1{
   position: absolute;
-  width: 420px;
+  top: 695px;
   border-radius: 7px;
   background: #fff;
   padding: 25px 28px 45px;
@@ -172,12 +305,12 @@ p {
   border-color: purple;
   right: 20px;
 }
-.box header{
+.box1 header{
   font-size: 28px;
   font-weight: 500;
   text-align: center;
 }
-.box .search{
+.box1 .search{
   position: relative;
   margin: 35px 0 18px;
 }
@@ -220,29 +353,29 @@ p {
 .search input:valid ~ span{
   display: block;
 }
-.box .info-text{
+.box1 .info-text{
   font-size: 13px;
   color: #9A9A9A;
   margin: -3px 0 -10px;
 }
-.box.active .info-text{
+.box1.active .info-text{
   display: none;
 }
 .info-text span{
   font-weight: 500;
 }
-.box ul{
+.box1 ul{
   height: 0;
   opacity: 0;
   padding-right: 1px;
   overflow-y: hidden;
   transition: all 0.2s ease;
 }
-.box.active ul{
+.box1.active ul{
   opacity: 1;
   height: 303px;
 }
-.box ul li{
+.box1 ul li{
   display: flex;
   list-style: none;
   margin-bottom: 14px;
@@ -306,3 +439,111 @@ ul .content::-webkit-scrollbar{
     width: 50%;
 }
 
+/*resizing*/
+@media (max-width: 768px) {
+  #menu-btn {
+    display: inline-block;
+  }
+  .header {
+    padding: 2rem;
+  }
+  .header .navbar {
+    position: absolute;
+    top: 99%;
+    left: 0;
+    right: 0;
+    background: #224bcf;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
+  .header .navbar.active {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+  .header .navbar ul li {
+    width: 100%;
+  }
+  .header .navbar ul li ul {
+    width: 100%;
+    position: relative;
+  }
+  .about .content h3 {
+    font-size: 3rem;
+  }
+  .main-video video {
+    width: 95%;
+    border-width: .2rem;
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
+  .box1{
+    position: absolute;
+    top: 872px;
+    border-radius: 7px;
+    background: #fff;
+    padding: 25px 28px 45px;
+    box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
+    width: 50%;
+    border-style: outset;
+    border-color: purple;
+    right: 20px;
+  }
+  
+.flexbox{
+  width: 100%;
+  height: 800px;
+
+}
+
+ img{
+  width: 0px;
+  height: 0px;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 1150px;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: black;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+
+/* Position the "next button" to the right */
+.next {
+  left: 150px;
+  border-radius: 3px 0 0 3px;
+}
+
+
+/* Caption text */
+.text {
+  position: absolute;
+  top:870px;
+  left:20px ;
+  color: black;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 310px;
+  width: 100%;
+  
+}
+
+
+
+
+}
