--- a/quiz.css
+++ b/quiz.css
@@ -380,3 +380,47 @@ footer button.show{
     color: #fff;
     background: purple;
 }
+
+@media (max-width: 450px) {
+    .box{
+        width: 400px;
+        border-radius: 7px;
+        background: #fff;
+        padding: 25px 28px 45px;
+        box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
+      }
+      .quiz_box{
+        width: 400px;
+        background: #fff;
+        border-radius: 5px;
+        transform: translate(-50%, -50%) scale(0.9);
+        opacity: 0;
+        pointer-events: none;
+        transition: all 0.3s ease;
+    }
+    
+.info_box{
+    width: 400px;
+    background: #fff;
+    border-radius: 5px;
+    transform: translate(-50%, -50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.result_box{
+    background: #fff;
+    border-radius: 5px;
+    display: flex;
+    padding: 25px 30px;
+    width: 400px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    transform: translate(-50%, -50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+}
